<resources>
    <string name="app_name">WiFi Scanner (EPIT UNSA)</string>
    <string name="navigation_drawer_open">Open drawer navigation</string>
    <string name="navigation_drawer_close">Close drawer navigation</string>
    <string name="nav_header_title" translatable="false">WiFi Scanner</string>
    <string name="nav_header_subtitle" translatable="false">epit@unsa.edu.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Measurements</string>
    <string name="menu_scan_wifi">Scan WiFi network</string>
    <string name="menu_scan_wifi_networks">Scan WiFi networks</string>
    <string name="updateURL">Update URL</string>
    <string name="url_to_send_data">Place a URL to send the data to</string>
    <string name="info_scan_wifi_networks">Scans WiFi networks and displays Access Points with their RSSI level.</string>
    <string name="location_permit_refused">Location permit refused</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="header_ssid" translatable="false">SSID</string>
    <string name="header_bssid" translatable="false">BSSID</string>
    <string name="header_signal_strength">Signal Strength</string>
    <string name="header_frequency">Frequency</string>
    <string name="header_capabilities">Capabilities</string>
    <string name="info_scan_wifi">Scan the connected WiFi network</string>
    <string name="without_wifi">WiFi no connected</string>
    <string name="isHiddenSSID">isHiddenSSID</string>
    <string name="capabilities">Capabilities</string>
    <string name="updatedURL">Updated URL</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="wifi_throttling_off">Wi-Fi scan throttling is disabled</string>
    <string name="app_company_name" translatable="false">EPIT UNSA</string>
    <string name="wifi_throttling_on">Wi-Fi scan throttling is enabled</string>
    <string name="about">About</string>
    <string name="about_description_title">Description:</string>
    <string name="about_description_text">Scan the network and get the RSSI of the access points. Used for \"Internal WiFi Positioning\" using multiple WiFi Access Points and the Android app to take RSSI measurements.</string>
    <string name="gpl" translatable="false"><u>GNU General Public License v3.0</u></string>
    <string name="gpl_url" translatable="false">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_license_title">License:</string>
    <string name="app_url" translatable="false">https://github.com/tcasaniv/Wi-Fi-positioning-systems/</string>
    <string name="package_name" translatable="false">com.tcasaniv.wifiscannerepitunsa</string>
    <string name="send_data">Send Data</string>
    <string name="successfully_submitted">Successfully submitted</string>
    <string name="error_sending">Error when sending</string>
</resources>