<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scan_wifi"
            android:icon="@drawable/ic_network_wifi"
            android:title="@string/menu_scan_wifi" />
        <item
            android:id="@+id/nav_scan_wifi_networks"
            android:icon="@drawable/ic_network_wifi"
            android:title="@string/menu_scan_wifi_networks" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/about" />
    </group>
</menu>