<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:orientation="vertical"
    tools:context=".ui.scan_wifi.ScanWiFiFragment">


    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/menu_scan_wifi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_scan_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:padding="8sp"
                android:text="@string/info_scan_wifi"
                android:textAlignment="center"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TableLayout
                    android:id="@+id/wifiTableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1" />

            </HorizontalScrollView>

            <ImageView
                android:id="@+id/noWifiImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/without_wifi"
                android:src="@drawable/ic_signal_wifi_off"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>